# vm-translator

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  codeWriter.c  codeWriter.h  errorHandler.c  errorHandler.h  keywords.c  keywords.h  main.c  main.h  parser.c  parser.h
test/: CMakeLists.txt  parser_test.cpp
test/testFiles/: test_1.vm
